clear the data provider cache after import, tdf#111960

This might also fix some problems with normal ODS files and not just
with FODS files when we recompile formulas after the whole import.

Change-Id: Iec05d2052ca5ce3bdf03abf02d502e4537fd3082