include/svl/hint.hxx
@@ -90,6 +90,7 @@ enum class SfxHintId {
     ScKillEditViewNoPaint,
     ScHiddenRowsChanged,
     ScSelectionChanged,
+    ScClearCache,
 
 // SC accessibility hints
     ScAccTableChanged,
